# Cyph3D

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  LICENSE.md  README.md  copy_resources.py  init.bat  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build.yaml
assets/scenes/: Egypt.c3dscene  Path tracing demo 2.c3dscene  Path tracing demo.c3dscene  Test Scene.c3dscene
assets/skyboxes/space2/: space2.c3dskybox
cmake/: Resources.cmake  Shaders.cmake
cmake/toolchains/: clang-cl.cmake  clang.cmake  gcc.cmake  msvc.cmake
cmake/utils/: Shaders.cmake
data/shaders/common/: 64bit.glsl
data/shaders/imgui/: imgui.frag
data/shaders/lighting/: lighting.frag
data/shaders/path tracing/: black skybox.rmiss  path trace.rchit  path trace.rgen
data/shaders/shadow mapping/: point light.frag
resources/materials/Fire/: Fire.c3dmaterial  material.json
resources/materials/Mirror/: Mirror.c3dmaterial  material.json
resources/materials/Sun/: Sun.c3dmaterial  material.json
resources/scenes/: AlienAltar.c3ds  AlienAltar.c3dscene  AlienAltar.json  Dungeon.c3ds  Dungeon.c3dscene  Dungeon.json  Egypt.c3ds  Egypt.c3dscene  Egypt.json  Path tracing demo 2.c3dscene  Path tracing demo.c3dscene  RT scene.c3ds  RT scene.c3dscene  Spaceship.c3ds  Spaceship.c3dscene  Spaceship.json  Suzanne scene.c3ds  Suzanne scene.c3dscene  Test Scene.c3ds  Test Scene.c3dscene  Test Scene.json
resources/shaders/: lightingPass.frag  lightingPass.vert
resources/shaders/internal/: fullscreen quad.vert  scene common data.glsl  shaderHeader.frag  shaderHeader.geom
resources/shaders/materialLayout/: basicPBR.frag  basicPBR.json  unlit.frag  unlit.json
resources/shaders/postProcessing/: toneMapping.vert  tonemapping.frag
resources/skyboxes/desert/: desert.c3dskybox  nx.hdr  nz.hdr  px.hdr  py.hdr  pz.hdr  skybox.json
resources/skyboxes/space/: skybox.json  space.c3dskybox
resources/skyboxes/space2/: skybox.json  space2.c3dskybox
src/: Engine.cpp  Engine.h  GLPipelineState.h  GLStateManager.cpp  GLStateManager.h  Logger.cpp  Logger.h  Main.cpp  ObjectSerialization.h  Timer.cpp  Timer.h  Window.cpp  Window.h  stdfloat.h
src/Cyph3D/: Engine.cpp  Engine.h  Event.h  GLSL_types.h  HashBuilder.h  LibImpl.cpp  Main.cpp  ObjectSerialization.cpp  RenderContext.h  StbImage.cpp  StbImage.h  Timer.cpp  Timer.h  Window.cpp  Window.h
src/Cyph3D/Asset/: AssetCacheDatabase.cpp  AssetCacheDatabase.h  AssetManager.cpp  AssetManager.h  AssetManagerWorkerData.h  BindlessTextureManager.cpp  BindlessTextureManager.h
src/Cyph3D/Entity/: Entity.cpp  Entity.h
src/Cyph3D/Enums/: ImageType.h  TextureType.h
src/Cyph3D/Exception/: OpenGLException.h
src/Cyph3D/GLObject/: Buffer.h  BufferBase.cpp  BufferBase.h  Cubemap.cpp  Cubemap.h  Framebuffer.cpp  Framebuffer.h  GLBuffer.h  GLCubemap.cpp  GLCubemap.h  GLFence.cpp  GLFence.h  GLFramebuffer.cpp  GLFramebuffer.h  GLImmutableBuffer.h  GLMutableBuffer.h  GLObject.cpp  GLObject.h  GLSampler.cpp  GLSampler.h  GLShader.cpp  GLShader.h  GLShaderProgram.cpp  GLShaderProgram.h  GLShaderProgram_setUniform.cpp  GLTexture.cpp  GLTexture.h  GLVertexArray.cpp  GLVertexArray.h  Mesh.cpp  Mesh.h  Sampler.cpp  Sampler.h  ShaderProgram.cpp  ShaderProgram.h  ShaderProgram_setUniform.cpp  ShaderStorageBuffer.h  Texture.cpp  Texture.h  VertexArray.h
src/Cyph3D/Helper/: FileHelper.cpp  FileHelper.h  GlfwHelper.cpp  GlfwHelper.h  ImGuiHelper.cpp  ImGuiHelper.h  JsonHelper.cpp  JsonHelper.h  MathHelper.cpp  MathHelper.h  RenderHelper.cpp  RenderHelper.h  ShaderHelper.cpp  ShaderHelper.h  StringHelper.cpp  StringHelper.h  TextureHelper.cpp  TextureHelper.h  ThreadHelper.cpp  ThreadHelper.h  VectorHelper.h
src/Cyph3D/Iterator/: ComponentConstIterator.cpp  ComponentConstIterator.h  ComponentIterator.cpp  ComponentIterator.h  EntityConstIterator.cpp  EntityConstIterator.h  EntityIterator.cpp  EntityIterator.h
src/Cyph3D/Logging/: LogColorFlags.h  Logger.cpp  Logger.h
src/Entity/: ComponentSerialization.h  Entity.cpp  Entity.h  EntitySerialization.h
src/Enums/: ObjectType.h  ResourceType.h
src/Exception/: OpenGLException.h
src/GLObject/: Buffer.h  BufferBase.cpp  BufferBase.h  Cubemap.cpp  Cubemap.h  Framebuffer.cpp  Framebuffer.h  MapDefinition.h  Material.cpp  Material.h  MaterialShaderProgram.cpp  MaterialShaderProgram.h  Mesh.cpp  Mesh.h  Sampler.cpp  Sampler.h  ShaderProgram.cpp  ShaderProgram.h  ShaderProgram_setUniform.cpp  ShaderStorageBuffer.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.h
src/Helper/: FileHelper.cpp  FileHelper.h  GlfwHelper.cpp  JsonHelper.cpp  JsonHelper.h  MathHelper.cpp  MathHelper.h  RenderHelper.cpp  RenderHelper.h  ShaderHelper.cpp  ShaderHelper.h  StringHelper.cpp  StringHelper.h  TextureHelper.cpp  TextureHelper.h  VectorHelper.h
src/Iterator/: ComponentConstIterator.cpp  ComponentConstIterator.h  ComponentIterator.h  EntityConstIterator.cpp  EntityIterator.h
src/Logging/: Logger.cpp  Logger.h
src/PerfCounter/: GpuPerfCounter.cpp  GpuPerfCounter.h  PerfStep.h
src/Rendering/: IPostProcessEffect.h  IPostProcessingEffect.h  RenderRegistry.h  Renderer.cpp  Renderer.h  SceneObjectRegistry.h  ToneMappingPostProcess.cpp  ToneMappingPostProcess.h
src/ResourceManagement/: Image.cpp  Image.h  Model.cpp  Model.h  Resource.h  ResourceManager.cpp  ResourceManager.h  Skybox.cpp  Skybox.h  StbImage.cpp  StbImage.h  VertexData.h
src/Scene/: Camera.cpp  Camera.h  DirectionalLight.cpp  DirectionalLight.h  Light.cpp  Light.h  MeshObject.cpp  MeshObject.h  PointLight.cpp  PointLight.h  Scene.cpp  Scene.h  SceneObject.cpp  SceneObject.h  Transform.cpp  Transform.h
src/UI/: UIHelper.cpp  UIHelper.h
src/glsl/: fullscreen quad.vert
vcpkg-overlay-ports/ispc/: portfile.cmake
vcpkg/toolchains/: linux-clang.cmake  linux-gcc.cmake  macos-clang.cmake  windows-clang-cl.cmake  windows-clang.cmake  windows-msvc.cmake
vcpkg/triplets/: arm64-macos-clang.cmake  x64-linux-clang.cmake  x64-linux-gcc.cmake  x64-windows-clang-cl.cmake  x64-windows-clang.cmake  x64-windows-msvc.cmake
(+721 files in other folders)
